[fix]: Sanitize log output

--- a/env.example
+++ b/env.example
@@ -1,6 +1,7 @@
 # News API Configuration
-# Get a free API key from https://www.marketaux.com/ or https://financialmodelingprep.com/
-NEWS_API_KEY=your_api_key_here
+# Using MarketAux - free tier allows 3 articles per request
+# Get your free API key at: https://www.marketaux.com/
+NEWS_API_KEY=your_marketaux_api_key_here
 NEWS_API_BASE_URL=https://api.marketaux.com/v1
 
 # SMTP Configuration (Gmail example - use App Password)
