[improvement]: Add feature flags for retained sections

--- a/env.example
+++ b/env.example
@@ -14,3 +14,11 @@ RECIPIENT_EMAIL=recipient@example.com
 # Ollama Configuration
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama3
+
+# Section Feature Flags (true/false)
+# Toggle which news sections to include in your newsletter
+SECTION_WORLD_ENABLED=true
+SECTION_US_TECH_ENABLED=true
+SECTION_US_INDUSTRY_ENABLED=true
+SECTION_MALAYSIA_TECH_ENABLED=true
+SECTION_MALAYSIA_INDUSTRY_ENABLED=true
