[feature]: add TTS engine, stores mp3 locally for now

--- a/env.example
+++ b/env.example
@@ -15,6 +15,14 @@ RECIPIENT_EMAIL=recipient@example.com
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama3
 
+# TTS Configuration (Coqui TTS)
+# Generates audio broadcast from article summaries
+TTS_ENABLED=true
+TTS_MODEL=tts_models/en/ljspeech/tacotron2-DDC
+TTS_OUTPUT_DIR=audio_output
+TTS_USE_CUDA=false
+TTS_DURATION_MINUTES=2.0
+
 # Section Feature Flags (true/false)
 # Toggle which news sections to include in your newsletter
 SECTION_WORLD_ENABLED=true
