[improvement]: Integrates xtts_v2 model

--- a/env.example
+++ b/env.example
@@ -17,8 +17,13 @@ OLLAMA_MODEL=llama3
 
 # TTS Configuration (Coqui TTS)
 # Generates audio broadcast from article summaries
+# NOTE: Coqui TTS is licensed for non-commercial use only
 TTS_ENABLED=true
 TTS_MODEL=tts_models/en/ljspeech/tacotron2-DDC
+# TTS_MODEL=tts_models/multilingual/multi-dataset/xtts_v2  # High-quality multilingual
+TTS_LANGUAGE=en  # Language code (required for XTTS models)
+TTS_SPEAKER=Claribel Dervla  # Speaker name for XTTS (options: Claribel Dervla, Ana Florence, etc.)
+TTS_SPEED=1.0  # Speech speed (1.0 = normal, 1.2 = 20% faster, 0.8 = 20% slower)
 TTS_OUTPUT_DIR=audio_output
 TTS_USE_CUDA=false
 TTS_DURATION_MINUTES=2.0
