[feature]: add RSS client & improve logging

--- a/env.example
+++ b/env.example
@@ -35,3 +35,9 @@ SECTION_US_TECH_ENABLED=true
 SECTION_US_INDUSTRY_ENABLED=true
 SECTION_MALAYSIA_TECH_ENABLED=true
 SECTION_MALAYSIA_INDUSTRY_ENABLED=true
+
+# RSS Feed Configuration (Optional)
+# Add custom RSS/Atom feeds as additional news sources alongside MarketAux
+# Feed names are automatically derived from the URL domain
+RSS_ENABLED=true
+# RSS_FEEDS=https://feeds.reuters.com/reuters/businessNews,https://feeds.bbci.co.uk/news/business/rss.xml
